fix: fix center alignment and prefix left

--- a/editor-components/stats/stats29/stats29.module.scss
+++ b/editor-components/stats/stats29/stats29.module.scss
@@ -60,6 +60,8 @@
             align-items: flex-start !important;
 
             .stat-value {
+              display: flex;
+              align-items: flex-end;
               color: var(--composer-primary-color);
               gap: var(--composer-gap-xs);
               font-size: 12rem;
@@ -164,7 +166,7 @@
 
           .header-container {
             flex-direction: column;
-            align-items: flex-start;
+            align-items: var(--composer-content-alignment);
 
             .left-container {
               .description {
@@ -172,7 +174,7 @@
               }
 
               .button-container {
-                justify-content: flex-start;
+                justify-content: var(--composer-content-alignment);
 
                 .button {
                   width: auto;
@@ -187,9 +189,11 @@
             margin-top: var(--composer-gap-md);
 
             .stat-item {
+              align-items: var(--composer-content-alignment);
+
               .stat-value {
                 font-size: 7rem;
-                align-self: flex-start;
+                align-self: var(--composer-content-alignment);
 
                 .stat-number {
                   font-size: 7rem;
@@ -200,12 +204,18 @@
                 }
               }
 
+              .stat-subtitle {
+                text-align: var(--composer-content-alignment) !important;
+              }
+
               .stat-title {
                 font-size: 2rem !important;
+                text-align: var(--composer-content-alignment) !important;
               }
 
               .stat-description {
                 font-size: 0.9rem;
+                text-align: var(--composer-content-alignment);
               }
             }
           }
